[package]
name = "base4"
authors = ["Syed-Anees <syedanees816@gmail.com>"]
description = "A portable base4 bit packing codec implementation."
repository = "https://github.com/SyedAnees21/Base4"
version = "0.1.1"
edition = "2024"
publish = true
rust-version = "1.85.0"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["encoding", "compression", "multimedia::encoding"]
keywords = ["Base4", "Codec", "Decoding", "Encoding"]

[dev-dependencies]
rand = "0.9.1"
